--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,15 @@
 kotlin.code.style=official
-archives_base_name=fabric-example-mod
+archives_base_name=stevesurvivors
 maven_group=net.fabricmc
 loom_version=1.6-SNAPSHOT
-minecraft_version=1.21
-yarn_mappings=1.21+build.2
+minecraft_version=1.20.4
+yarn_mappings=1.20.4+build.3
 loader_version=0.15.11
 fabric_kotlin_version=1.11.0+kotlin.2.0.0
-fabric_api_version=0.100.1+1.21
+fabric_api_version=0.92.1+1.20.4
 mod_version=1.0.0
 
+better_combat_version=1.8.6+1.20.4
+cloth_config_version=13.0.121
+player_animator_version=1.0.2-rc1+1.20.4
 org.gradle.jvmargs=-Xmx4000m
