--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,5 @@ mod_version=1.0.0
 better_combat_version=1.8.6+1.20.4
 cloth_config_version=13.0.121
 player_animator_version=1.0.2-rc1+1.20.4
+attribute_fix_version=9i2o9Ch1
 org.gradle.jvmargs=-Xmx4000m
